--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.13",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "chart.js": "^4.4.8",
+        "react-chartjs-2": "^5.3.0"
     }
 }
